--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,14 +14,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Legends of Learning</a>
+            <a class="navbar-brand" href="{% if current_user.is_authenticated %}{% if current_user.role.value == 'teacher' %}{{ url_for('teacher.dashboard') }}{% elif current_user.role.value == 'student' %}{{ url_for('student.dashboard') }}{% else %}{{ url_for('main.index') }}{% endif %}{% else %}{{ url_for('main.index') }}{% endif %}">Legends of Learning</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+                        <a class="nav-link" href="{% if current_user.is_authenticated %}{% if current_user.role.value == 'teacher' %}{{ url_for('teacher.dashboard') }}{% elif current_user.role.value == 'student' %}{{ url_for('student.dashboard') }}{% else %}{{ url_for('main.index') }}{% endif %}{% else %}{{ url_for('main.index') }}{% endif %}">Home</a>
                     </li>
                 </ul>
                 <div class="collapse navbar-collapse justify-content-end">
